updated resume and Jobs

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="s-intro__content-text">
               <div class="s-intro__content-pretitle text-pretitle">Hello</div>
               <h1 class="s-intro__content-title">
-                I'm Jangam Chenchu Gokul<br />
-                an aspiring Python developer <br />
+                I'm Chenchu Gokul Jangam<br />
+                an aspiring Software Engineer <br />
                 passionate about scalable solutions.
               </h1>
 
@@ -143,26 +143,6 @@
               <span class="u-screen-reader-text">Linkedin</span>
             </a>
           </li>
-          <!-- <li>
-            <a href="https://www.instagram.com/urs._.mehaboob._/">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1); transform: ; -ms-filter: "
-              >
-                <path
-                  d="M11.999,7.377c-2.554,0-4.623,2.07-4.623,4.623c0,2.554,2.069,4.624,4.623,4.624c2.552,0,4.623-2.07,4.623-4.624 C16.622,9.447,14.551,7.377,11.999,7.377L11.999,7.377z M11.999,15.004c-1.659,0-3.004-1.345-3.004-3.003 c0-1.659,1.345-3.003,3.004-3.003s3.002,1.344,3.002,3.003C15.001,13.659,13.658,15.004,11.999,15.004L11.999,15.004z"
-                ></path>
-                <circle cx="16.806" cy="7.207" r="1.078"></circle>
-                <path
-                  d="M20.533,6.111c-0.469-1.209-1.424-2.165-2.633-2.632c-0.699-0.263-1.438-0.404-2.186-0.42 c-0.963-0.042-1.268-0.054-3.71-0.054s-2.755,0-3.71,0.054C7.548,3.074,6.809,3.215,6.11,3.479C4.9,3.946,3.945,4.902,3.477,6.111 c-0.263,0.7-0.404,1.438-0.419,2.186c-0.043,0.962-0.056,1.267-0.056,3.71c0,2.442,0,2.753,0.056,3.71 c0.015,0.748,0.156,1.486,0.419,2.187c0.469,1.208,1.424,2.164,2.634,2.632c0.696,0.272,1.435,0.426,2.185,0.45 c0.963,0.042,1.268,0.055,3.71,0.055s2.755,0,3.71-0.055c0.747-0.015,1.486-0.157,2.186-0.419c1.209-0.469,2.164-1.424,2.633-2.633 c0.263-0.7,0.404-1.438,0.419-2.186c0.043-0.962,0.056-1.267,0.056-3.71s0-2.753-0.056-3.71C20.941,7.57,20.801,6.819,20.533,6.111z M19.315,15.643c-0.007,0.576-0.111,1.147-0.311,1.688c-0.305,0.787-0.926,1.409-1.712,1.711c-0.535,0.199-1.099,0.303-1.67,0.311 c-0.95,0.044-1.218,0.055-3.654,0.055c-2.438,0-2.687,0-3.655-0.055c-0.569-0.007-1.135-0.112-1.669-0.311 c-0.789-0.301-1.414-0.923-1.719-1.711c-0.196-0.534-0.302-1.099-0.311-1.669c-0.043-0.95-0.053-1.218-0.053-3.654 c0-2.437,0-2.686,0.053-3.655c0.007-0.576,0.111-1.146,0.311-1.687c0.305-0.789,0.93-1.41,1.719-1.712 c0.534-0.198,1.1-0.303,1.669-0.311c0.951-0.043,1.218-0.055,3.655-0.055c2.437,0,2.687,0,3.654,0.055 c0.571,0.007,1.135,0.112,1.67,0.311c0.786,0.303,1.407,0.925,1.712,1.712c0.196,0.534,0.302,1.099,0.311,1.669 c0.043,0.951,0.054,1.218,0.054,3.655c0,2.436,0,2.698-0.043,3.654H19.315z"
-                ></path>
-              </svg>
-              <span class="u-screen-reader-text">Instagram</span>
-            </a>
-          </li> -->
         </ul>
         <!-- end s-intro__social -->
 
@@ -182,19 +162,7 @@
 
         <div class="s-intro__scroll-down">
           <a href="#about" class="smoothscroll">
-            <div class="scroll-icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1);  "
-              >
-                <path
-                  d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"
-                ></path>
-              </svg>
-            </div>
+            
             <span class="scroll-text u-screen-reader-text">Scroll Down</span>
           </a>
         </div>
@@ -213,13 +181,13 @@
             <!-- end section-header -->
 
             <p class="attention-getter">
-              Aspiring Python Developer with expertise in Python, SQL, DSA and cloud computing, alongside hands-on experience in projects like a Crime Prediction System and Patient Health Analysis System. A recent B.Tech graduate passionate about building scalable software solutions, I excel in web technologies and thrive on tackling complex technical challenges. With a strong interest in Compiler Design, I’m eager to contribute to innovative teams and grow in the ever-evolving tech industry.            </p>
+              Aspiring Software Engineer with expertise in Python, SQL, DSA, and cloud computing, and hands-on experience in projects like a Crime Prediction System and Patient Health Analysis System. A recent B.Tech graduate passionate about building scalable software solutions, I also gaining backend development experience at AntStack, working with Python, JavaScript, and AWS Lambda. Additionally, I completed an AI/ML internship at Sithafal Technologies, contributing to AI-driven features, frontend integration, and cloud-based deployments using Azure DevOps. I excel in web technologies, thrive on complex challenges, and have a strong interest in Compiler Design. I'm eager to contribute to innovative teams and grow in the dynamic tech industry.            </p>
 
             <p class="attention-getter">
               <h4><b> Key Strengths:<br/> </b></h4>
               <ul>
                   <li>Python software development and backend systems</li>
-                  <li>Cloud computing (AWS, Azure)</li>
+                  <li>Cloud computing (AWS Lambda, Amazon API Gateway, S3, DynamoDB, SES, SNS, SQS, VPC, etc..,)</li>
                   <li>API integration and development</li>
                   <li>Machine learning model implementation</li>
                   <li>Version control systems (Git, GitHub)</li>
@@ -228,7 +196,7 @@
                   <li>Database management (MySQL, MongoDB, SQL)</li>
                   <li>Agile development methodologies</li>
                   <li>Problem-solving and system design</li>
-                  <li>Software development life cycle (SDLC)</li>
+                  <li>Software development life cycle </li>
                   <li>Automation and continuous integration</li>
                   <li>Containerization and orchestration (Docker, Kubernetes)</li>
                   <li>Collaboration and team management</li>
@@ -269,6 +237,24 @@
                 <h4 class="s-about__block-title">Internships</h4>
                 <ul class="s-about__list">
                   <li>
+                    AntStack Technologies, Bangalore
+                    <span>Backend Developer Intern</span>
+                    <p>Currently working as a Backend Developer Intern at Anstack, where I am actively involved in building<br/>
+                    and integrating backend services using Python and JavaScript within AWS Lambda to support serverless architecture.<br/>
+                    My role focuses on developing scalable and efficient backend logic, optimizing performance, and ensuring seamless data flow between services.
+                    </p>
+                  </li>
+                  <li>
+                    Sithafal Technologies, Tirupati
+                    <span>Backend Developer Intern</span>
+                    <p>I worked as an AI and Machine Learning Developer Intern at Sithafal Technologies,<br/>
+                      Where I collaborated with the team to integrate backend components with frontend interfaces using JavaScript.<br/>
+                      Throughout the project, I leveraged tools like SharePoint for document management and Azure DevOps for version control,<br/>
+                      CI/CD pipelines, and project tracking. This experience enhanced my skills in end-to-end model development, cloud-based deployment,<br/>
+                      and cross-functional collaboration in an agile environment.
+                    </p>
+                  </li>
+                  <li>
                     Young Minds Technology Solutions Pvt Ltd 
                     <span>Application Developer Intern</span>
                     <p>Developed backend functionalities using Core Java, focusing on object-oriented design principles.<br/>
@@ -277,13 +263,12 @@
                     </p>
                   </li>
                   <li>
-                  Google(AICTE)
-                  <span>AI and ML Virtual Intern (Skill Development Program)</span>
-                  <p>
-                    Developed machine learning models for data-driven applications, achieving an average accuracy of 85%.<br/>
+                    Google(AICTE)
+                    <span>AI and ML Virtual Intern (Skill Development Program)</span>
+                    <p>Developed machine learning models for data-driven applications, achieving an average accuracy of 85%.<br/>
                     Integrated ML models into software systems using Python and TensorFlow.<br/>
                     Contributed to the deployment process, ensuring scalability and performance.
-                  </p>
+                    </p>
                   </li>
                 </ul>
               </div>
@@ -491,24 +476,6 @@
           </div>
         </div>
         <!-- end section-footer__bottom -->
-
-        <div class="ss-go-top">
-          <a class="smoothscroll" title="Back to Top" href="#top">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              style="fill: rgba(0, 0, 0, 1);"
-            >
-              <path
-                d="M5.536 21.886a1.004 1.004 0 0 0 1.033-.064l13-9a1 1 0 0 0 0-1.644l-13-9A1 1 0 0 0 5 3v18a1 1 0 0 0 .536.886z"
-              ></path>
-            </svg>
-          </a>
-          <span>Back To Top</span>
-        </div>
-        <!-- end ss-go-top -->
       </footer>
       <!-- end s-footer -->
     </div>
