--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   </li>
                   <li>
                     Sithafal Technologies, Tirupati
-                    <span>Backend Developer Intern</span>
+                    <span>AI/ML Intern</span>
                     <p>I worked as an AI and Machine Learning Developer Intern at Sithafal Technologies,<br/>
                       Where I collaborated with the team to integrate backend components with frontend interfaces using JavaScript.<br/>
                       Throughout the project, I leveraged tools like SharePoint for document management and Azure DevOps for version control,<br/>
