--- a/index.html
+++ b/index.html
@@ -232,16 +232,36 @@
             <!-- end section-header -->
             <p class="attention-getter"></p>
 
-            <div id = "#Work" class="grid-list-items s-about__blocks">
-              <div class="grid-list-items__item s-about__block">
+            <div id = "#Work" class="s-about__blocks">
+              <div class="s-about__block">
+                <h4 class="s-about__block-title">Current Role</h4>
+                <ul class="s-about__list">
+                  <li>
+                    AntStack Technologies, Bangalore
+                    <span>Member of Technical Staff - 1</span>
+                    <p>Currently working as Member of Technical Staff - 1 at AntStack, contributing to both internal and external projects involving large-scale integrations and automation.<br/>
+                    <strong>Key Responsibilities & Achievements:</strong><br/>
+                    • Integrated multiple applications using RESTful APIs for seamless data exchange<br/>
+                    • Automated workflows to minimize manual operations and reduce data import time<br/>
+                    • Developed and optimized GitHub Actions and worked with GitHub APIs for repository and secret management<br/>
+                    • Built and deployed AWS serverless applications using Lambda, API Gateway, SES, DynamoDB, and SAM<br/>
+                    • Working with Spring Boot and Go-based microservices deployed on AWS (ECS, RDS, Redshift)<br/>
+                    • Resolved complex edge cases to improve system reliability and user experience<br/>
+                    • Continuously contributing to innovative and cloud-native backend solutions that enhance automation and scalability<br/>
+                    • Actively learning and experimenting with AI tools and frameworks, implementing practical use cases using various LLMs and AI agents to automate and optimize development workflows
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="s-about__block">
                 <h4 class="s-about__block-title">Internships</h4>
                 <ul class="s-about__list">
                   <li>
                     AntStack Technologies, Bangalore
                     <span>Backend Developer Intern</span>
-                    <p>Currently working as a Backend Developer Intern at Anstack, where I am actively involved in building<br/>
+                    <p>Worked as a Backend Developer Intern at AntStack, where I was actively involved in building<br/>
                     and integrating backend services using Python and JavaScript within AWS Lambda to support serverless architecture.<br/>
-                    My role focuses on developing scalable and efficient backend logic, optimizing performance, and ensuring seamless data flow between services.
+                    My role focused on developing scalable and efficient backend logic, optimizing performance, and ensuring seamless data flow between services.
                     </p>
                   </li>
                   <li>
@@ -276,7 +296,6 @@
           </div>
         </div>
       </section>
-
 
       <section id="Projects" class="s-about target-section">
         <div class="row s-about__content">
