--- a/index.html
+++ b/index.html
@@ -304,9 +304,36 @@
               <h2 class="text-display-title">Projects</h2>
             </div>
               <!--end s-about__block -->
-              <div class="grid-list-items__item s-about__block">
+              <div class="s-about__block">
                 <!-- <h4 class="s-about__block-title">Projects</h4> -->
                 <ul class="s-about__list">
+                  <li>
+                    <strong>Internal Hiring Platform (ATS) — AntStack Technologies</strong>
+                    <p class="project-description">
+                      • Architected and deployed a production-grade Applicant Tracking System with integrated exam-delivery microservice in 2 weeks, achieving 99.2% system uptime and supporting 1000+ concurrent users.<br/>
+                      • Integrated 5+ internal applications into a unified hiring platform, reducing manual data entry by 70% and cutting hiring cycle time from 15 days to 7 days through workflow automation.<br/>
+                      • Implemented comprehensive security measures (encryption, role-based access control) and optimized database queries, improving API response time by 45% while maintaining ACID compliance.<br/>
+                      <strong>Tech Stack & Tools:</strong> TypeScript, AWS SAM, AWS Lambda, SES, DynamoDB, Supabase, Git APIs, CI/CD Pipelines
+                    </p>
+                  </li>
+                  <li>
+                    <strong>AI/ML-Based Demand & Warehouse Stock Prediction System — AntStack Technologies</strong>
+                    <p class="project-description">
+                      • Engineered an end-to-end ML pipeline for demand forecasting and inventory optimization, processing 500K+ daily transactions to predict warehouse stock requirements with 80% accuracy.<br/>
+                      • Optimized feature engineering and model selection through rigorous A/B testing, reducing prediction RMSE by 35% and enabling more accurate inventory allocation across 20+ warehouses.<br/>
+                      • Developed scalable data processing infrastructure using PySpark and Databricks, achieving 60% reduction in data processing time and enabling real-time predictions for dynamic supply chain management.<br/>
+                      <strong>Tech Stack & Tools:</strong> PySpark, Python (Scikit-learn, XGBoost), AWS Lambda, Databricks, AWS S3, Machine Learning Models
+                    </p>
+                  </li>
+                  <li>
+                    <strong>Healthcare Management & Data Processing Platform — AntStack Technologies</strong>
+                    <p class="project-description">
+                      • Refactored 15+ critical APIs with auto-retry mechanisms and circuit breaker patterns, reducing error rates by 80% and achieving 99.95% service availability while handling 10K+ daily requests.<br/>
+                      • Built an intelligent PDF processing pipeline for patient records that automated data extraction and validation, reducing manual data entry time by 75% and processing 500+ documents daily with 98% accuracy.<br/>
+                      • Architected and optimized cloud infrastructure leveraging Lambda, RDS, and Redshift, enabling real-time analytics on 50M+ patient records while reducing query latency by 55% and cloud costs by 30%.<br/>
+                      <strong>Tech Stack & Tools:</strong> Java Spring Boot, Go, TypeScript, AWS Lambda, API Gateway, DynamoDB, RDS, Redshift (Data Lake), ECS, EventBridge, SQS, S3/FSx, IAM, CloudFormation, CodePipeline, CDK, JasperReports
+                    </p>
+                  </li>
                   <li>
                     <a href="https://github.com/chenchugokuljangam13/Crime-Prediction-through-Machine-Learning-Algorithms">Crime Prediction System Through Machine Learning</a>
                     <p class="project-description">
@@ -314,14 +341,14 @@
                       Implemented APIs for data retrieval and visualization, improving error margin predictions by 15%.<br/>
                       Utilized SQLite for efficient data storage and managed over 500,000 data points.<br/>
                       <strong>Technologies and Data Used:</strong> Python 3, CSS, HTML, Django, SQLite, Pandas, Machine Learning, and Chicago Crime Data.
-                  </p>
+                    </p>
                   </li>
                   <li>
                     <a href="https://github.com/chenchugokuljangam13/Crime-Prediction-through-Machine-Learning-Algorithms">Patient Health Analysis Using Machine Learning</a>
                     <p class="project-description">Designed a system to analyze patient health metrics and predict outcomes using Scikit-learn.<br/>
                       Created RESTful APIs for seamless integration with front-end components.<br/>
                       Achieved 90% model accuracy, enhancing healthcare decision-making.<br/>
-                      <strong>Technologies Used</strong> Python3, CSS, HTML, Javascript, Django, SQLite, Pandas and ML
+                      <strong>Technologies Used:</strong> Python3, CSS, HTML, Javascript, Django, SQLite, Pandas and ML
                     </p>
                   </li>
                 </ul>
