--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="row s-about__content">
           <div class="column xl-12">
             <div class="section-header" data-num="02">
-              <h2 class="text-display-title">work Experience</h2>
+              <h2 class="text-display-title">Work Experience</h2>
             </div>
             <!-- end section-header -->
             <p class="attention-getter"></p>
