Removed dots for current role

--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
                     <span>Member of Technical Staff - 1</span>
                     <p>Currently working as Member of Technical Staff - 1 at AntStack, contributing to both internal and external projects involving large-scale integrations and automation.<br/>
                     <strong>Key Responsibilities & Achievements:</strong><br/>
-                    • Integrated multiple applications using RESTful APIs for seamless data exchange<br/>
-                    • Automated workflows to minimize manual operations and reduce data import time<br/>
-                    • Developed and optimized GitHub Actions and worked with GitHub APIs for repository and secret management<br/>
-                    • Built and deployed AWS serverless applications using Lambda, API Gateway, SES, DynamoDB, and SAM<br/>
-                    • Working with Spring Boot and Go-based microservices deployed on AWS (ECS, RDS, Redshift)<br/>
-                    • Resolved complex edge cases to improve system reliability and user experience<br/>
-                    • Continuously contributing to innovative and cloud-native backend solutions that enhance automation and scalability<br/>
-                    • Actively learning and experimenting with AI tools and frameworks, implementing practical use cases using various LLMs and AI agents to automate and optimize development workflows
+                    Integrated multiple applications using RESTful APIs for seamless data exchange<br/>
+                    Automated workflows to minimize manual operations and reduce data import time<br/>
+                    Developed and optimized GitHub Actions and worked with GitHub APIs for repository and secret management<br/>
+                    Built and deployed AWS serverless applications using Lambda, API Gateway, SES, DynamoDB, and SAM<br/>
+                    Working with Spring Boot and Go-based microservices deployed on AWS (ECS, RDS, Redshift)<br/>
+                    Resolved complex edge cases to improve system reliability and user experience<br/>
+                    Continuously contributing to innovative and cloud-native backend solutions that enhance automation and scalability<br/>
+                    Actively learning and experimenting with AI tools and frameworks, implementing practical use cases using various LLMs and AI agents to automate and optimize development workflows
                     </p>
                   </li>
                 </ul>
