Updated into line

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="s-intro__content-pretitle text-pretitle">Hello</div>
               <h1 class="s-intro__content-title">
                 I'm Chenchu Gokul Jangam<br />
-                an aspiring Software Engineer <br />
+                Backend Engineer <br />
                 passionate about scalable solutions.
               </h1>
 
