Updated skill sheet

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <li><a class="smoothscroll" href="#about">About</a></li>
               <li><a class="smoothscroll" href="#works">Works</a></li>
               <li><a class="smoothscroll" href="#Projects">Projects</a></li>
-              <li><a class="smoothscroll" href="#Certifications">Certification and Skills</a></li>
+              <li><a class="smoothscroll" href="#Certifications">Certifications</a></li>
               <li><a class="smoothscroll" href="#footer">Contact</a></li>
             </ul>
             <!-- s-header__menu-links -->
@@ -184,28 +184,22 @@
               Backend Engineer with a strong foundation in Python, Java, SQL, Data Structures and Algorithms (DSA), and cloud technologies. I specialize in building scalable, secure, and high-performance backend systems, with experience in developing serverless architectures, integrating APIs, and implementing AI/ML-based solutions for real-world use cases. I have worked on simplifying complex system architectures into clean, maintainable, and secure applications that can scale efficiently under high traffic. My work involves collaborating across different technology stacks and cloud-native environments, where I quickly adapt to new tools and frameworks to deliver robust and reliable solutions. I am well-versed in the complete Software Development Life Cycle (SDLC) and focus on building systems that improve performance, reliability, and automation while reducing manual effort. I also leverage AI effectively through strong prompting skills, ensuring data security, privacy, and compliance at every stage. Driven by a strong problem-solving mindset, I enjoy building backend solutions that create measurable technical and business impact.            </p>
 
             <p class="attention-getter">
-              <h4><b> Key Strengths:<br/> </b></h4>
+              <h4><b> Key Strengths and Skills:<br/> </b></h4>
               <ul>
-                  <li>Python software development and backend systems</li>
-                  <li>Cloud computing (AWS Lambda, Amazon API Gateway, S3, DynamoDB, SES, SNS, SQS, VPC, etc..,)</li>
-                  <li>API integration and development</li>
-                  <li>Machine learning model implementation</li>
-                  <li>Version control systems (Git, GitHub)</li>
-                  <li>Scripting languages (Python, Java, GoLang)</li>
-                  <li>Frontend technologies (HTML, CSS)</li>
-                  <li>Database management (MySQL, MongoDB, SQL)</li>
-                  <li>Agile development methodologies</li>
-                  <li>Problem-solving and system design</li>
-                  <li>Software development life cycle </li>
-                  <li>Automation and continuous integration</li>
-                  <li>Containerization and orchestration (Docker, Kubernetes)</li>
-                  <li>Collaboration and team management</li>
-                  <li>Cloud infrastructure and automation tools (AWS Lambda, EC2)</li>
-                  <li>Unit testing and debugging</li>
-                  <li>Data processing and aggregation</li>
-                  <li>Data visualization (using libraries like Matplotlib, Seaborn)</li>
+                  <li><strong>Programming Languages:</strong> TypeScript, Python (Django), Java, JavaScript, Go, HTML/CSS</li>
+                  <li><strong>Backend Development:</strong> Microservices architecture (Spring Boot, Go), Serverless architecture (AWS SAM, Lambda), RESTful APIs, GraphQL, WebSocket</li>
+                  <li><strong>Cloud & Infrastructure:</strong> AWS (Lambda, API Gateway, S3, DynamoDB, SES, SNS, SQS, VPC, ECS, RDS, Redshift, EventBridge, CloudFormation, CDK, IAM, EC2, CloudWatch, CloudFront, SFS, SAM, Bedrock), Azure DevOps</li>
+                  <li><strong>Databases:</strong> SQL (MySQL, MS SQL Server, RDS, Supabase, PostgreSQL), NoSQL (DynamoDB, MongoDB)</li>
+                  <li><strong>Big Data & Analytics:</strong> PySpark, Databricks, Apache Spark, Data warehousing (Redshift data lakes), Real-time data processing</li>
+                  <li><strong>AI/ML:</strong> Machine Learning frameworks (Scikit-learn, XGBoost, TensorFlow), RAG, AWS Bedrock, MCP server, Prompt Engineering, AI/ML pipelines and model deployment</li>
+                  <li><strong>DevOps & Automation:</strong> GitHub Actions, CI/CD pipelines, Infrastructure as Code (SAM, CloudFormation, CDK), Docker, Kubernetes, Workflow automation</li>
+                  <li><strong>Software Development:</strong> SDLC, Agile methodologies, Version control (Git, GitHub), Debugging, Logging, Unit testing</li>
+                  <li><strong>System Design & Architecture:</strong> Problem-solving and system design, Event-driven architecture, System reliability patterns (circuit breakers, auto-retry mechanisms), Performance optimization and database tuning</li>
+                  <li><strong>Security & Compliance:</strong> Encryption, Role-based access control (RBAC), ACID compliance, Data security and privacy</li>
+                  <li><strong>Core Concepts:</strong> Data Structures and Algorithms, Object-Oriented Programming (OOP), Data analysis and aggregation, Data visualization (Matplotlib, Seaborn)</li>
+                  <li><strong>Collaboration:</strong> Team management, Cross-functional collaboration, Agile development</li>
             </ul>
-            
+
             </p>
 
             <p class="attention-getter">
@@ -361,11 +355,9 @@
         <div class="row s-about__content">
           <div class="column xl-12">
             <div class="section-header" data-num="04">
-              <h2 class="text-display-title">Certification and Skills</h2>
+              <h2 class="text-display-title">Certifications</h2>
             </div>
               <div class="grid-list-items__item s-about__block">
-                <h4 class="s-about__block-title">Certifications</h4>
-
                 <ul class="s-about__list">
                   <li>
                     <a
@@ -407,23 +399,6 @@
                       <span>in — 2023</span>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <!--end s-about__block -->
-
-              <div class="grid-list-items__item s-about__block">
-                <h4 class="s-about__block-title">Technical Skills and Technologies Known</h4>
-
-                <ul class="s-about__list">
-                  <li><strong>Programming Languages:</strong> Python, Java, GoLang</li>
-                  <li><strong>Cloud & Infrastructure:</strong> AWS and cloud Computing</li>
-                  <li><strong>Backend Development:</strong> API integration and development</li>
-                  <li><strong>Version Control:</strong> Git, GitHub</li>
-                  <li><strong>Frontend Technologies:</strong> HTML, CSS</li>
-                  <li><strong>Database Management:</strong> MySQL, SQL</li>
-                  <li><strong>Software Development:</strong> SDLC, Software Development methodologies, Agile methodologies</li>
-                  <li><strong>Containerization & Orchestration:</strong> Docker, Kubernetes</li>
-                  
                 </ul>
               </div>
               <!--end s-about__block -->
