--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
         <div class="s-intro__content-media">
           <img
-            src="GokulPHoto1.jpg"
-            srcset="GokulPHoto1.jpg 1x, GokulPHoto1.jpg 2x"
+            src="GokulPhoto2.jpg"
+            srcset="GokulPhoto2.jpg 1x, GokulPhoto2.jpg 2x"
             alt=""
           />
         </div>
